<resources>
    <string name="app_name">KTU App</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="student_information_portal_osis">Student Information Portal(OSIS)</string>
    <string name="attachment_portal_ilo">Attachment Portal (ILO)</string>
    <string name="teaching_time_table">Teaching Time Table</string>
    <string name="exam_time_table">Exam Time Table</string>
    <string name="fees_structure">Fees Structure</string>
    <string name="university_library">University Library</string>
    <string name="admission">Admission</string>
    <string name="vle">Virtual Learning Environment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="check_mail_inbox">Check Mail Inbox</string>
    <string name="developer">Ebenezer Arkoh-Addo</string>
    <string name="a_computer_science_student">Computer Science Student</string>
    <string name="_2018_2023">2018 – 2023</string>
    <string name="tel1">0572945773</string>
    <string name="email">arkohaddoebenezer21@gmail.com</string>
    <string name="financial_aid_scholarship">Financial Aid/Scholarship</string>
    <string name="insider_news">Insider News</string>
    <string name="ktu_journal">KTU Journal</string>
    <string name="alumni_relation_office">Alumni Relation Office</string>
    <string name="src_portal">SRC Portal</string>
    <string name="src_constitution">SRC Constitution</string>
    <string name="src">SRC</string>
    <string name="about_app">About App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="developer_info">Developer Info</string>
    <string name="ask_the_src">Ask The SRC</string>
    <string name="tel2">0246611317</string>
    <string name="developed_by">. Developed by</string>
    <string name="activate_your_mail_with_ease">Activate Your Mail with Ease</string>
    <string name="enter_index_number_here">Enter Index number here</string>
    <string name="image">image</string>
    <string name="generate_mail">Generate Mail</string>
    <string name="use_the_following_e_mail_and_password_generated_to_activate_your_e_mail_copy_the_e_mail_and_password_somewhere_before_clicking_the_ativate_button_below">use the following e-mail and password generated to activate your e-mail. copy the e-mail and password somewhere before clicking the ativate button below</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="changeme">changeme</string>
    <string name="activate_institutional_e_mail">Activate Institutional E-Mail</string>
    <string name="koforidua_technical_university">KOFORIDUA TECHNICAL UNIVERSITY</string>
    <string name="innovation_for_development">Innovation for Development</string>
    <string name="enter_your_first_name_here">Enter your first name here</string>
    <string name="index_number_should_not_include">Index number should not include /</string>
    <string name="activate_institution_s_mail">Activate Institution\'s Mail</string>
</resources>
