<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayoutActivation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MailActivationActivity">
    <include layout="@layout/bar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_your_mail_with_ease"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginEnd="120dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:background="@color/colorPrimary"
        />

        <EditText
            android:id="@+id/editTextMailActivationFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_your_first_name_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/editTextMailActivationIndexNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_index_number_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.9"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/caution"
                    android:contentDescription="@string/image" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:text="@string/index_number_should_not_include"
                    android:textColor="#FF0000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonMailActivationGenerateMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_created"
        android:text="@string/generate_mail" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_primary"
        android:gravity="center"
        android:text="@string/use_the_following_e_mail_and_password_generated_to_activate_your_e_mail_copy_the_e_mail_and_password_somewhere_before_clicking_the_ativate_button_below"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"

        />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/textViewMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textIsSelectable="true"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/changeme"
            android:textColor="@color/colorWhite"
            android:textIsSelectable="true"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonMailActivationActivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_created_orangeborder"
        android:text="@string/activate_institutional_e_mail"
        android:visibility="gone" />
    </LinearLayout>
