<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    android:background="@drawable/background">
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header"
        android:background="@drawable/background"
        />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:background="@color/colorPrimary"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/buttonMainSIP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/student_information_portal_osis"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainILO"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/attachment_portal_ilo"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainVLE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vle"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainCheckMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_mail_inbox"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainActiveMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activate_institution_s_mail"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainUniversityLibrary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/university_library"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainTTT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/teaching_time_table"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainETT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/exam_time_table"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainFeeStructur"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fees_structure"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />
                        <Button
                            android:id="@+id/buttonMainAdmission"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/admission"
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:background="@drawable/border_primary"
                            android:textAllCaps="false"
                            android:padding="25dp"
                            />



                    </LinearLayout>

                </ScrollView>

            </LinearLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>